[gd_scene load_steps=11 format=3 uid="uid://c361vt6f7ulfb"]

[ext_resource type="Script" uid="uid://dfqyeiq0c888v" path="res://wizard.gd" id="1_xxhrx"]
[ext_resource type="Texture2D" uid="uid://cey1oj3ramtbb" path="res://Assets/Assets (tiny)/Characters(100x100)/Wizard/Wizard/Wizard.png" id="2_xxhrx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_34mad"]
atlas = ExtResource("2_xxhrx")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo1iy"]
atlas = ExtResource("2_xxhrx")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsbrn"]
atlas = ExtResource("2_xxhrx")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsvjg"]
atlas = ExtResource("2_xxhrx")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_74p71"]
atlas = ExtResource("2_xxhrx")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tmfn"]
atlas = ExtResource("2_xxhrx")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2tmfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34mad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo1iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsbrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsvjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74p71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tmfn")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0isxx"]
radius = 5.0990195

[node name="Wizzard" type="Node2D"]
script = ExtResource("1_xxhrx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_2tmfn")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.13589525

[node name="PlayerDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(1, 5)
shape = SubResource("CircleShape2D_0isxx")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_body_exited"]
